# platanus

./: CMakeLists.txt  LICENSE  README.md
sandbox/test/test_scenes/scene1/: scene1.cpp
src/platanus/foundation/image/: imagewriter.h
src/platanus/foundation/math/: ray.h  vector.h
src/platanus/foundation/math/intersection/: raysphere.h
src/platanus/renderer/kernel/intersection/: intersector.cpp  intersector.h  tracecontext.h
src/platanus/renderer/kernel/rendering/: renderframe.h
src/platanus/renderer/kernel/shading/: shadingcontext.h  shadingengine.cpp  shadingengine.h
src/platanus/renderer/modeling/camera/: camera.h  pinholecamera.cpp  pinholecamera.h
src/platanus/renderer/modeling/frame/: frame.cpp  frame.h
src/platanus/renderer/modeling/material/: material.cpp  material.h
src/platanus/renderer/modeling/material/bsdf/: bsdf.h  lambertianbrdf.h  phongdiffuse.cpp  phongdiffuse.h
src/platanus/renderer/modeling/object/: object.h  sphereobject.cpp  sphereobject.h
src/platanus/renderer/modeling/scene/: scene.cpp  scene.h
